force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/Daily_Collection_Report__c.object-meta.xml
<CustomObject>
    <label>Daily Collections</label>
    <nameField>
        <displayFormat>DCR-{000}</displayFormat>
        <label>Daily Collection Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Collection Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>