force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/fields/Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Collection_Status__c</fullName>
    <label>Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received in full</fullName>
            </value>
            <value>
                <fullName>Received partially</fullName>
            </value>
            <value>
                <fullName>Received in Excess</fullName>
            </value>
            <value>
                <fullName>Pending in full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>