force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/fields/Credit_Days__c.field-meta.xml
<CustomField>
    <fullName>Credit_Days__c</fullName>
    <label>Credit Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>