force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Daily_Collection_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>