force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/fields/DN_CN_Recommendation_Note__c.field-meta.xml
<CustomField>
    <fullName>DN_CN_Recommendation_Note__c</fullName>
    <label>DN/CN Recommendation Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>