force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>MONTH( Invoice_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>