force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/fields/Payment_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Receipt_Date__c</fullName>
    <label>Payment Receipt Date</label>
    <type>Date</type>
</CustomField>