force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/fields/PI_Amount__c.field-meta.xml
<CustomField>
    <fullName>PI_Amount__c</fullName>
    <label>PI Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>