force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/fields/Receipt_Mode__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Mode__c</fullName>
    <label>Receipt Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>