force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/fields/Remarks_If_any__c.field-meta.xml
<CustomField>
    <fullName>Remarks_If_any__c</fullName>
    <label>Remarks - If any</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>