force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/fields/Shortfall_Excess_if_any__c.field-meta.xml
<CustomField>
    <fullName>Shortfall_Excess_if_any__c</fullName>
    <label>Shortfall/Excess if any</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>