force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/fields/Transit_Days__c.field-meta.xml
<CustomField>
    <fullName>Transit_Days__c</fullName>
    <label>Transit Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>