force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>YEAR( Invoice_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>