force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Executive__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Collection_Status__c</columns>
    <columns>Amount_Received__c</columns>
    <columns>Payment_Receipt_Date__c</columns>
    <columns>Receipt_Mode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>