force-app/force-app/force-app/main/default/objects/Daily_Collection_Report__c/listViews/My_Daily_Collection_Report.listView-meta.xml
<ListView>
    <fullName>My_Daily_Collection_Report</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Customer__c</columns>
    <columns>Executive__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Receipt_Mode__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Daily Collection Report</label>
</ListView>